# cascadeur-py-client

./: .aider.conf.yml  .aider.model.settings.yml  .aiderignore  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  mcp.json.example  pyproject.toml  temp_start_threaded_server.py
.llm-gate/: README.md  anygate.yaml  config.yaml  env.example
.promptx/: .xml-upgrade-backup-done  pouch.json
.promptx/resource/: project.registry.json
.serena/: project.yml
.serena/memories/: serena-test-successful.md
cascadeur-docs/: README.md  howto-scrape-cascadeur-python-api-docs.md
cascadeur-docs/manual/: 00_help.md  01_help_introduction.md  02_help_installation.md  03_help_installation_system_requirements.md  04_help_installation_windows.md  05_help_category_217.md  06_help_installation_ubuntu.md  07_help_installation_file_structure.md  08_help_installation_signing_in.md  09_help_installation_uninstall.md  10_help_getting_started.md  11_help_getting_started_for_other_software_users.md  12_help_getting_started_for_other_software_users_cascadeur_for_maya_users.md  13_help_getting_started_for_other_software_users_cascadeur_for_blender_users.md  14_help_getting_started_for_other_software_users_cascadeur_for_3ds_max_users.md  15_help_getting_started_import_fbxdae.md  16_help_getting_started_import_fbxdae_import_animation_from_ue.md  17_help_getting_started_import_fbxdae_import_from_blender.md  18_help_getting_started_import_fbxdae_import_from_daz_studio.md  19_help_getting_started_import_fbxdae_using_mixamo_rig_in_cascadeur.md  20_help_getting_started_import_fbxdae_working_with_character_creator.md  21_help_category_210.md  22_help_category_212.md  23_help_category_282.md  24_help_getting_started_scenes.md  25_help_getting_started_scenes_scenes_with_multiple_characters.md  26_help_getting_started_edit_modes.md  27_help_getting_started_main_controls.md  28_help_getting_started_workflow_basics.md  29_help_getting_started_export_fbxdae.md  30_help_getting_started_export_fbxdae_export_to_unreal_engine.md  31_help_getting_started_export_fbxdae_export_to_unity.md  32_help_category_192.md  33_help_category_280.md  34_help_category_213.md  35_help_category_283.md  36_help_interface.md  37_help_interface_viewport.md  38_help_interface_toolbar.md  39_help_interface_timeline.md  (+9 more)
cascadeur-docs/python/: 01_python-api_csc.html.md  README.md  api_reference.json  csc.Direction.md  csc.Guid.md  csc.app.Analytics.md  csc.app.DataSourceManager.md  csc.app.ProjectLoader.md  csc.app.SceneManager.md  csc.app.SceneTool.md  csc.app.SimpleStatusInformer.md  csc.external.fbx.ExtraDatas.md  csc.external.fbx.FbxDatas.md  csc.fbx.FbxSceneLoader.md  csc.layers.Cycle.md  csc.layers.CyclesViewer.md  csc.layers.Header.md  csc.layers.Layers.md  csc.layers.LayersContainer.md  csc.layers.LayersSelectionChanger.md  csc.layers.index.CellIndex.md  csc.layers.layer.Common.md  csc.layers.layer.Fixation.md  csc.layers.layer.IkFk.md  csc.layers.layer.Interpolation.md  csc.layers.layer.Interval.md  csc.layers.layer.Key.md  csc.math.Rotation.md  csc.math.ScaledTransform.md  csc.math.SizesInterval.md  csc.math.Triangle.md  csc.math.get_m3f_diag.md  csc.math.inverse_transform_point.md  csc.math.modify_position_by_matrix.md  csc.math.project_point_on_basic_line.md  csc.math.transform_point.md  csc.md  csc.parts.GroupInfo.md  csc.parts.Info.md  csc.parts.Type.md  (+25 more)
cascadeur-docs/scripts/: README.md  requirements.txt  scrape_api_docs.py
casey-docs/: README.md  inventory.json  objects.inv  pages_index.json
casey-docs/markdown/: README.md  csc.Direction.md  csc.DirectionValue.md  csc.Guid.md  csc.SystemVariables.md  csc.Version.md  csc.app.ActionManager.md  csc.app.Analytics.md  csc.app.Application.md  csc.app.CascadeurTool.md  csc.app.DataSourceManager.md  csc.app.ProjectLoader.md  csc.app.SceneManager.md  csc.app.SceneTool.md  csc.app.SettingsManager.md  csc.app.SimpleStatusInformer.md  csc.app.StatusManager.md  csc.app.ToolsManager.md  csc.domain.Asset.md  csc.domain.AssetId.md  csc.domain.FrameActionOnChange.md  csc.domain.IMessageHandler.md  csc.domain.IntervalActionOnChange.md  csc.domain.LocalInterpolator.md  csc.domain.Pivot.md  csc.domain.ProcessorsStorage.md  csc.domain.Scene.md  csc.domain.SceneUpdater.md  csc.domain.Select.md  csc.domain.Selection.md  csc.domain.Selector.md  csc.domain.SelectorFilter.md  csc.domain.SelectorMode.md  csc.domain.Session.md  csc.domain.StatePivot.md  csc.domain.Tool_object_id.md  csc.domain.assets.AssetsManager.md  csc.domain.assets.FigureVertex.md  csc.domain.assets.Mesh.md  csc.domain.assets.MeshDependency.md  (+176 more)
context/: README.md
context/design/: README.md  architecture-overview.md
context/hints/: README.md  about-crawling-sphinx-api-docs.md  about-json-rpc-2.0-protocol-mandatory.md  about-jsonrpc-without-networking.md  about-litellm-proxy-endpoints.md  about-single-machine-server-client-ipc.md  about-smplx-python313-compatibility.md  doc_style.system.txt  howto-batch-clean-markdowns-with-litellm.md  howto-clean-api-documentation.md  howto-configure-pixi-platform-specific-pytorch.md  howto-crawl-sphinx-with-scrapy-retries.md  howto-serialize-jsonrpc-requests-main-thread.md  howto-setup-cascadeur-server.md
context/instructions/: README.md  cascadeur-env.md
context/logs/: 2025-01-22_cascadeur-doc-crawl-implementation-success.md  README.md
context/plans/: README.md  v1.0-implementation-roadmap.md
context/roles/: README.md
docs/: index.md
examples/: animation_example.py  basic_usage.py  paste_http_pusher.py  paste_min_client.py  paste_min_server.py  run_http_echo_server.py  start_aio_server.py  test_health_exec_server.py  test_health_exec_server_spawn.py  test_threaded_server.py  thread_http_echo_server.py  uuid_file_writer.py  write_10_uuid_files.py
scripts/: INSTALL_TO_CASCADEUR.md  README.md  README_CSC_Documentation.md  README_KATEX_FIXER.md  README_pip_for_cascadeur.md  add-serena-mcp.ps1  extract_csc_docs.py  extract_csc_simple.py  fix_katex_errors.py  fix_katex_errors_v2.py  pip_for_cascadeur.py  run_katex_fixer.py
tests/: README.md  test_client.py
(+164 files in other folders)
