[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cascadeur-py-client"
version = "0.1.0"
description = "A pythonic client API to interface with Cascadeur animation software"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
maintainers = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["cascadeur", "animation", "3d", "character", "rigging", "physics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8", 
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.7"
dependencies = [
    "typing-extensions>=4.0.0; python_version<'3.8'", "jsonrpc>=3.0.1,<4", "aiohttp>=3.12.15,<4", "requests>=2.32.5,<3", "pydantic>=2.11.7,<3", "html2text>=2025.4.15,<2026", "litellm>=1.75.9,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=22.0",
    "isort>=5.0",
    "flake8>=4.0",
    "mypy>=0.910",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
    "sphinx-autodoc-typehints>=1.12",
]

[project.urls]
Homepage = "https://github.com/igamenovoer/cascadeur-py-client"
Repository = "https://github.com/igamenovoer/cascadeur-py-client"
Documentation = "https://cascadeur-py-client.readthedocs.io/"
"Bug Tracker" = "https://github.com/igamenovoer/cascadeur-py-client/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=cascadeur_client --cov-report=term-missing"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.dependencies]
# Pin Python version explicitly (avoids ambiguity warning)
python = "==3.11.0"
litellm = ">=1.75.9,<2"

[tool.pixi.pypi-dependencies]
cascadeur-py-client = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }
docs = { features = ["docs"], solve-group = "default" }

[tool.pixi.tasks]

[dependency-groups]
dev = ["sphobjinv>=2.3.1.3,<3", "bs4>=0.0.2,<0.0.3", "playwright>=1.54.0,<2", "scrapy>=2.13.3,<3"]
